<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="btnLogin">Log in</string>
    <string name="btnRegister">Register</string>
    <string name="etUsername">Username</string>
    <string name="etPasswordRepeat">Repeat Password</string>
    <string name="titleRegister">Register</string>
    <string name="tvRestaurante1">Tony Roma\'s</string>
    <string name="tvEndereco">Av. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="tvHorario">Fecha às 22:00</string>
    <string name="tvPratos">Pratos Principais</string>
    <string name="tvNomePrato">Salada com Molho de Gengibre</string>
    <string name="tvDescricaoPrato">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusant doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis.</string>
    <string name="tvOr">OR</string>
    <string name="noTitle">" "</string>
</resources>