<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardRestaurante"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="0dp"
    app:strokeColor="@color/colorGray"
    app:strokeWidth="2dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivRestaurante"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/image1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/tvRestaurante1"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEndereco"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvHorario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvHorario"
                android:textColor="@color/colorGray"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>